create route to get project when limit member is good
